# airqo-african-air-quality

./: .env  README.md  pyproject.toml
notebooks/: data_preprocessing.ipynb  eda.ipynb  sklearn_onnx_github_issue.ipynb
src/airqo_african_air_quality/: __init__.py
